--- a/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/hasura/metadata/databases/default/tables/public_users.yaml
@@ -99,3 +99,50 @@ select_permissions:
               id:
                 _eq: X-Hasura-User-Id
   role: user
+event_triggers:
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+    update:
+      columns:
+      - address
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: create-profile
+  retry_conf:
+    interval_sec: 10
+    num_retries: 10
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event-triggers/create-profile"
+- definition:
+    enable_manual: false
+    update:
+      columns:
+      - non_giver
+      - non_receiver
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: opt-out-discord
+  retry_conf:
+    interval_sec: 10
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event-triggers/opt-out-discord"
+- definition:
+    enable_manual: false
+    update:
+      columns:
+      - non_giver
+      - non_receiver
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: opt-out-telegram
+  retry_conf:
+    interval_sec: 10
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event-triggers/opt-out-telegram"
