Standardize backend naming (#582)

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -2,7 +2,18 @@ actions:
 - name: adminUpdateUser
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/admin_update_user'
+    handler: '{{HASURA_API_BASE_URL}}/actions/adminUpdateUser'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: createCircle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createCircle'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -13,7 +24,7 @@ actions:
 - name: createUser
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/create_user'
+    handler: '{{HASURA_API_BASE_URL}}/actions/createUser'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -22,31 +33,20 @@ actions:
   - role: user
   - role: superadmin
   comment: creates a user in a circle and creates a profile if none exists
-- name: create_circle
-  definition:
-    kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/create_circle'
-    forward_client_headers: true
-    headers:
-    - name: verification_key
-      value_from_env: HASURA_EVENT_SECRET
-  permissions:
-  - role: user
-  - role: superadmin
 - name: logoutUser
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/logout_user'
+    handler: '{{HASURA_API_BASE_URL}}/actions/logoutUser'
     headers:
     - name: verification_key
       value_from_env: HASURA_EVENT_SECRET
   permissions:
   - role: superadmin
   - role: user
-- name: upload_circle_logo
+- name: uploadCircleLogo
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/upload_circle_logo'
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadCircleLogo'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -54,10 +54,10 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-- name: upload_profile_avatar
+- name: uploadProfileAvatar
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/upload_profile_avatar'
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileAvatar'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -65,10 +65,10 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-- name: upload_profile_background
+- name: uploadProfileBackground
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/upload_profile_background'
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileBackground'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -79,13 +79,13 @@ actions:
 custom_types:
   enums: []
   input_objects:
-  - name: create_circle_input
-  - name: upload_circle_image_input
+  - name: CreateCircleInput
   - name: CreateUserInput
-  - name: upload_image_input
+  - name: UploadImageInput
+  - name: UploadCircleImageInput
   - name: AdminUpdateUserInput
   objects:
-  - name: create_circle_response
+  - name: CreateCircleResponse
     relationships:
     - remote_table:
         schema: public
@@ -103,7 +103,7 @@ custom_types:
       type: object
       field_mapping:
         id: id
-  - name: update_profile_response
+  - name: UpdateProfileResponse
     relationships:
     - remote_table:
         schema: public
@@ -113,12 +113,22 @@ custom_types:
       type: object
       field_mapping:
         id: id
-  - name: update_circle_response
+  - name: UpdateCircleResponse
     relationships:
     - remote_table:
         schema: public
         name: circles
       name: circle
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: LogoutResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: profiles
+      name: profile
       source: default
       type: object
       field_mapping:
@@ -129,16 +139,6 @@ custom_types:
         schema: public
         name: users
       name: UserResponse
-      source: default
-      type: object
-      field_mapping:
-        id: id
-  - name: logoutResponse
-    relationships:
-    - remote_table:
-        schema: public
-        name: profiles
-      name: profile
       source: default
       type: object
       field_mapping:
