--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
-    "lint:check": "eslint \"{api,src}/**/*.{js,ts,tsx}\"",
+    "lint:check": "eslint \"{api,api-lib,hasura,src}/**/*.{js,ts,tsx,graphql}\"",
     "lint:fix": "yarn lint:check --fix",
     "prettier": "prettier \"{api,src}/**/*.{js,ts,tsx}\"",
     "prettier:check": "yarn prettier --check",
@@ -104,7 +104,7 @@
     "figma-colors": "node ./scripts/tsrun.mjs ./scripts/update-figma-colors.ts"
   },
   "lint-staged": {
-    "{api,src}/**/*.{js,ts,tsx}": [
+    "{api,api-lib,hasura,src}/**/*.{js,ts,tsx,graphql}": [
       "eslint --fix",
       "prettier --write"
     ]
@@ -138,6 +138,7 @@
     "@datamodels/identity-profile-basic": "0.1.2",
     "@glazed/types": "0.1.3",
     "@gqty/cli": "2.3.1",
+    "@graphql-eslint/eslint-plugin": "3.8.0",
     "@sentry/webpack-plugin": "1.18.4",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
@@ -176,6 +177,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-unicorn": "41.0.0",
     "execa": "6.0.0",
     "figma-api": "1.9.2",
     "http-browserify": "1.7.0",
