--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -21,6 +21,16 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: createNominee
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createNominee'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: createUser
   definition:
     kind: synchronous
@@ -32,7 +42,6 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-  comment: creates a user in a circle and creates a profile if none exists
 - name: logoutUser
   definition:
     kind: synchronous
@@ -76,16 +85,6 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-- name: createNominee
-  definition:
-    kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/create_nominee'
-    headers:
-      - name: verification_key
-        value_from_env: HASURA_EVENT_SECRET
-  permissions:
-    - role: user
-    - role: superadmin
 custom_types:
   enums: []
   input_objects:
