--- a/hasura/metadata/databases/default/tables/public_nominees.yaml
+++ b/hasura/metadata/databases/default/tables/public_nominees.yaml
@@ -108,3 +108,42 @@ event_triggers:
     num_retries: 5
     timeout_sec: 60
   webhook: "{{HASURA_API_BASE_URL}}/event_triggers/checkNomineeTelegram"
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: createNomineeDiscord
+  retry_conf:
+    interval_sec: 10
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/createNomineeDiscord"
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: createNomineeTelegram
+  retry_conf:
+    interval_sec: 10
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/createNomineeTelegram"
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: createVouchedUser
+  retry_conf:
+    interval_sec: 10
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/createVouchedUser"
