--- a/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
@@ -1,3 +1,55 @@
 table:
   name: vault_transactions
   schema: public
+object_relationships:
+- name: user
+  using:
+    foreign_key_constraint_on: created_by
+- name: vault
+  using:
+    foreign_key_constraint_on: vault_id
+insert_permissions:
+- permission:
+    backend_only: false
+    check:
+      vault:
+        protocol:
+          circles:
+            users:
+              profile:
+                id:
+                  _eq: X-Hasura-User-Id
+    columns:
+    - id
+    - name
+    - tx_hash
+    - description
+    - value
+    - date
+    - vault_id
+    - created_by
+    - created_at
+    - updated_at
+  role: user
+select_permissions:
+- permission:
+    columns:
+    - id
+    - name
+    - tx_hash
+    - description
+    - value
+    - date
+    - vault_id
+    - created_by
+    - created_at
+    - updated_at
+    filter:
+      vault:
+        protocol:
+          circles:
+            users:
+              profile:
+                id:
+                  _eq: X-Hasura-User-Id
+  role: user
