--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -21,6 +21,16 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: createNominee
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createNominee'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: createUser
   definition:
     kind: synchronous
@@ -32,7 +42,6 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-  comment: creates a user in a circle and creates a profile if none exists
 - name: logoutUser
   definition:
     kind: synchronous
@@ -84,6 +93,7 @@ custom_types:
   - name: UploadImageInput
   - name: UploadCircleImageInput
   - name: AdminUpdateUserInput
+  - name: CreateNomineeInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -139,6 +149,16 @@ custom_types:
         schema: public
         name: users
       name: UserResponse
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: CreateNomineeResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: nominees
+      name: nominee
       source: default
       type: object
       field_mapping:
