--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@prisma/client": "3.4.2",
     "@radix-ui/react-dialog": "^0.1.7",
     "@self.id/core": "0.1.0",
-    "@sentry/integrations": "6.17.1",
-    "@sentry/react": "6.17.1",
-    "@sentry/tracing": "6.17.1",
+    "@sentry/integrations": "^6.18.2",
+    "@sentry/node": "^6.18.2",
+    "@sentry/react": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
     "@types/sharp": "^0.29.5",
@@ -140,7 +141,7 @@
     "@glazed/types": "0.1.3",
     "@gqty/cli": "2.3.1",
     "@graphql-eslint/eslint-plugin": "3.8.0",
-    "@sentry/webpack-plugin": "1.18.4",
+    "@sentry/webpack-plugin": "^1.18.8",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.14",
