--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@material-ui/pickers": "3.3.10",
     "@prisma/client": "3.4.2",
     "@self.id/core": "0.1.0",
-    "@sentry/integrations": "6.17.1",
-    "@sentry/react": "6.17.1",
-    "@sentry/tracing": "6.17.1",
+    "@sentry/integrations": "^6.18.2",
+    "@sentry/node": "^6.18.2",
+    "@sentry/react": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "@stitches/react": "1.2.6",
     "@types/sharp": "^0.29.5",
     "@types/uuid": "^8.3.4",
@@ -138,7 +139,7 @@
     "@glazed/types": "0.1.3",
     "@gqty/cli": "2.3.1",
     "@graphql-eslint/eslint-plugin": "3.8.0",
-    "@sentry/webpack-plugin": "1.18.4",
+    "@sentry/webpack-plugin": "^1.18.8",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
