--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -96,6 +96,16 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: vouch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/vouch'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 custom_types:
   enums: []
   input_objects:
@@ -106,6 +116,7 @@ custom_types:
   - name: AdminUpdateUserInput
   - name: CreateNomineeInput
   - name: UpdateUserInput
+  - name: VouchInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -166,6 +177,16 @@ custom_types:
       field_mapping:
         id: id
   - name: CreateNomineeResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: nominees
+      name: nominee
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: VouchOutput
     relationships:
     - remote_table:
         schema: public
