--- a/hasura/metadata/databases/default/tables/public_vouches.yaml
+++ b/hasura/metadata/databases/default/tables/public_vouches.yaml
@@ -45,3 +45,30 @@ select_permissions:
               id:
                 _eq: X-Hasura-User-Id
   role: user
+event_triggers:
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: vouchDiscord
+  retry_conf:
+    interval_sec: 3600
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: vouchTelegram
+  retry_conf:
+    interval_sec: 3600
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
