--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -52,6 +52,17 @@ actions:
   permissions:
   - role: superadmin
   - role: user
+- name: updateUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: superadmin
+  - role: user
+  comment: Update own user
 - name: uploadCircleLogo
   definition:
     kind: synchronous
@@ -94,6 +105,7 @@ custom_types:
   - name: UploadCircleImageInput
   - name: AdminUpdateUserInput
   - name: CreateNomineeInput
+  - name: UpdateUserInput
   objects:
   - name: CreateCircleResponse
     relationships:
