--- a/hasura/metadata/databases/default/tables/public_epoches.yaml
+++ b/hasura/metadata/databases/default/tables/public_epoches.yaml
@@ -23,6 +23,15 @@ array_relationships:
       table:
         name: burns
         schema: public
+- name: epoch_pending_token_gifts
+  using:
+    manual_configuration:
+      column_mapping:
+        id: epoch_id
+      insertion_order: null
+      remote_table:
+        name: pending_token_gifts
+        schema: public
 select_permissions:
 - permission:
     columns:
