--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "0.21.2",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
+    "dedent": "^0.7.0",
     "ethereumjs-util": "7.1.3",
     "ethers": "5.5.1",
     "faker": "5.5.3",
@@ -152,6 +153,7 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
     "@types/debug": "4.1.7",
+    "@types/dedent": "^0.7.0",
     "@types/ethereumjs-util": "6.1.0",
     "@types/faker": "^5.5.9",
     "@types/jest": "26.0.20",
