--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,8 +1,40 @@
 actions:
+- name: adminUpdateUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/adminUpdateUser'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: createCircle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createCircle'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+- name: createNominee
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createNominee'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: createUser
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/create_user'
+    handler: '{{HASURA_API_BASE_URL}}/actions/createUser'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -10,10 +42,20 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-- name: create_circle
+- name: logoutUser
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/create_circle'
+    handler: '{{HASURA_API_BASE_URL}}/actions/logoutUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: superadmin
+  - role: user
+- name: uploadCircleLogo
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadCircleLogo'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -21,28 +63,39 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-- name: upload_profile_avatar
+- name: uploadProfileAvatar
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/upload_profile_avatar'
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileAvatar'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
   permissions:
-  - role: superadmin
   - role: user
-- name: upload_profile_background
+  - role: superadmin
+- name: uploadProfileBackground
   definition:
     kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/upload_profile_background'
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadProfileBackground'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
   permissions:
-  - role: superadmin
   - role: user
+  - role: superadmin
 custom_types:
   enums: []
   input_objects:
-  - name: create_circle_input
-  - name: createUserInput
-  - name: upload_image_input
+  - name: CreateCircleInput
+  - name: CreateUserInput
+  - name: UploadImageInput
+  - name: UploadCircleImageInput
+  - name: AdminUpdateUserInput
+  - name: CreateNomineeInput
   objects:
-  - name: create_circle_response
+  - name: CreateCircleResponse
     relationships:
     - remote_table:
         schema: public
@@ -60,13 +113,52 @@ custom_types:
       type: object
       field_mapping:
         id: id
-  - name: createUserResponse
-  - name: update_profile_response
+  - name: UpdateProfileResponse
     relationships:
     - remote_table:
         schema: public
         name: profiles
       name: profile
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: UpdateCircleResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: circles
+      name: circle
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: LogoutResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: profiles
+      name: profile
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: UserResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: users
+      name: UserResponse
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: CreateNomineeResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: nominees
+      name: nominee
       source: default
       type: object
       field_mapping:
