revert change to eslint import-order rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -113,6 +113,7 @@
           }
         ],
         "pathGroupsExcludedImportTypes": [],
+        "newlines-between": "always",
         "alphabetize": {
           "order": "asc",
           "caseInsensitive": true
