Create Hasura preview apps on PRs to hasura-next branch

--- a/.github/workflows/hasura-preview.yml
+++ b/.github/workflows/hasura-preview.yml
@@ -6,6 +6,7 @@ on:
       - 'hasura/**' # path to Hasura config, prevents creating deployments if no changes
     branches:
       - main
+      - hasura-next
 
 jobs:
   hasura-cloud-preview:
