upgrade some deps to unblock dependabot

--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -28,7 +28,7 @@
     "@types/node": "15.0.3",
     "chai": "4.3.4",
     "dotenv": "10.0.0",
-    "ethereum-waffle": "3.4.0",
+    "ethereum-waffle": "^4.0.0-alpha.0",
     "ethers": "5.4.6",
     "ganache": "^7.0.2",
     "hardhat": "2.8.0",
