Save new vaults to Hasura, added new column vault address to vaults table

--- a/hasura/metadata/databases/default/tables/public_vaults.yaml
+++ b/hasura/metadata/databases/default/tables/public_vaults.yaml
@@ -40,6 +40,7 @@ insert_permissions:
     - simple_token_address
     - symbol
     - token_address
+    - vault_address
     set:
       created_by: x-hasura-User-Id
   role: user
@@ -55,6 +56,7 @@ select_permissions:
     - symbol
     - token_address
     - updated_at
+    - vault_address
     filter:
       protocol:
         circles:
