Update DB seeding scripts to disable Hasura Event Triggers
This fixes the issue where Hasura starts running thousands of event triggers when seeding the DB, causing peoples computers to grind to a halt for 15+ minutes.

This was accomplished by commenting out the event triggers in Hasura metadata and applying it before running the seeding scripts (and re-enabling them afterwards)

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   },
   "scripts": {
     "setup": "./scripts/setup.sh",
-    "db-seed-fresh": "yarn db-clean && yarn db-seed && yarn db-add-me",
+    "db-seed-fresh": "./scripts/reseed_hasura.sh",
     "db-seed": "node ./scripts/tsrun.mjs ./scripts/db-seed.ts",
     "db-clean": "node ./scripts/tsrun.mjs ./scripts/db-clean.ts",
     "db-add-me": "node ./scripts/tsrun.mjs ./scripts/db-add-me.ts",
