--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "recoil": "0.4.1",
     "sharp": "^0.30.1",
     "source-map-explorer": "2.5.2",
+    "stream": "^0.0.2",
     "styled-components": "5.2.3",
     "true-myth": "4.1.1",
     "uuid": "^8.3.2",
