--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -21,6 +21,16 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: createEpoch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/createEpoch'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: createNominee
   definition:
     kind: synchronous
@@ -128,6 +138,7 @@ custom_types:
   - name: CreateNomineeInput
   - name: UpdateUserInput
   - name: VouchInput
+  - name: CreateEpochInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -204,6 +215,16 @@ custom_types:
         schema: public
         name: nominees
       name: nominee
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: EpochResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: epoches
+      name: epoch
       source: default
       type: object
       field_mapping:
