--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,14 +1,11 @@
-/api/       @topocount
-/api-lib/   @topocount
 /docker/    @topocount
-/hasura/    @topocount
 /scripts/   @topocount
 
 /src/       @teeolendo
 /hardhat/   @teeolendo
 
-/api/       @zashton
-/api-lib/   @zashton
-/hasura/    @zashton
+/api/       @zashton @topocount
+/api-lib/   @zashton @topocount
+/hasura/    @zashton @topocount
 
 /src/       @levity
