--- a/.github/workflows/hasura-preview.yml
+++ b/.github/workflows/hasura-preview.yml
@@ -2,7 +2,7 @@ name: 'hasura-cloud-preview'
 on:
   pull_request:
     types: [opened , reopened, synchronize]
-    if: ${{ !github.event.pull_request.head.repo.fork }}
+    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     paths:
       - 'hasura/**' # path to Hasura config, prevents creating deployments if no changes
     branches:
