--- a/hasura/metadata/databases/default/tables/public_vaults.yaml
+++ b/hasura/metadata/databases/default/tables/public_vaults.yaml
@@ -1,3 +1,60 @@
 table:
   name: vaults
   schema: public
+object_relationships:
+- name: protocol
+  using:
+    foreign_key_constraint_on: org_id
+- name: user
+  using:
+    foreign_key_constraint_on: created_by
+array_relationships:
+- name: vault_transactions
+  using:
+    foreign_key_constraint_on:
+      column: vault_id
+      table:
+        name: vault_transactions
+        schema: public
+insert_permissions:
+- permission:
+    backend_only: false
+    check:
+      protocol:
+        circles:
+          users:
+            profile:
+              id:
+                _eq: X-Hasura-User-Id
+    columns:
+    - decimals
+    - id
+    - org_id
+    - simple_token_address
+    - symbol
+    - token_address
+    - vault_address
+    set:
+      created_by: x-hasura-User-Id
+  role: user
+select_permissions:
+- permission:
+    columns:
+    - created_at
+    - created_by
+    - decimals
+    - id
+    - org_id
+    - simple_token_address
+    - symbol
+    - token_address
+    - updated_at
+    - vault_address
+    filter:
+      protocol:
+        circles:
+          users:
+            profile:
+              id:
+                _eq: X-Hasura-User-Id
+  role: user
