clean up hardhat commands
remove the ones from package.json that should only be run in setup scripts

add one for starting ganache

always deploy when running ganache

--- a/package.json
+++ b/package.json
@@ -83,15 +83,11 @@
     "build": "craco build",
     "build:local": "craco  --max_old_space_size=4096 build",
     "build:gzip": "craco build && gzipper --verbose ./build",
-    "hardhat:compile": "yarn --cwd hardhat compile",
-    "hardhat:codegen": "yarn --cwd hardhat codegen",
-    "hardhat:build": "yarn --cwd hardhat build",
     "hardhat:dev": "yarn --cwd hardhat dev",
-    "hardhat:deploy": "yarn --cwd hardhat deploy",
-    "hardhat:install": "yarn --cwd hardhat install",
+    "hardhat:ganache": "./hardhat/scripts/start-ganache.sh",
     "hardhat:test": "yarn --cwd hardhat test",
-    "test": "./hardhat/scripts/start-ganache.sh --deploy --exec craco test",
-    "test:ci": "./hardhat/scripts/start-ganache.sh --deploy --exec ./scripts/ci.sh",
+    "test": "yarn hardhat:ganache --exec craco test",
+    "test:ci": "yarn hardhat:ganache --exec ./scripts/ci.sh",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
