Prevent running DB seed commands without disabling event triggers + improve README

--- a/package.json
+++ b/package.json
@@ -70,10 +70,8 @@
   },
   "scripts": {
     "setup": "./scripts/setup.sh",
-    "db-seed-fresh": "./scripts/reseed_hasura.sh",
-    "db-seed": "node ./scripts/tsrun.mjs ./scripts/db-seed.ts",
-    "db-clean": "node ./scripts/tsrun.mjs ./scripts/db-clean.ts",
-    "db-add-me": "node ./scripts/tsrun.mjs ./scripts/db-add-me.ts",
+    "db-seed-fresh": "scripts/seed_hasura.sh --clean",
+    "db-seed": "scripts/seed_hasura.sh",
     "generate": "./scripts/generate-zeus.sh",
     "hasura": "hasura --envfile ../.env --project ./hasura",
     "docker:start": "docker-compose up -d",
@@ -179,6 +177,7 @@
     "eslint-plugin-unicorn": "41.0.0",
     "execa": "6.0.0",
     "figma-api": "1.9.2",
+    "hasura-cli": "2.2.0",
     "http-browserify": "1.7.0",
     "https-browserify": "1.0.0",
     "husky": "4.3.8",
