--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -52,6 +52,16 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: deleteEpoch
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/deleteEpoch'
+    headers:
+      - name: verification_key
+        value_from_env: HASURA_EVENT_SECRET
+  permissions:
+    - role: user
+    - role: superadmin
 - name: logoutUser
   definition:
     kind: synchronous
@@ -124,6 +134,7 @@ custom_types:
   - name: UploadImageInput
   - name: UploadCircleImageInput
   - name: AdminUpdateUserInput
+  - name: DeleteEpochInput
   - name: CreateNomineeInput
   - name: UpdateUserInput
   - name: VouchInput
@@ -187,6 +198,7 @@ custom_types:
       type: object
       field_mapping:
         id: id
+  - name: DeleteEpochResponse
   - name: CreateNomineeResponse
     relationships:
     - remote_table:
