--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -72,6 +72,16 @@ actions:
   permissions:
   - role: superadmin
   - role: user
+- name: updateTeammates
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/updateTeammates'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: updateUser
   definition:
     kind: synchronous
@@ -139,6 +149,7 @@ custom_types:
   - name: UpdateUserInput
   - name: VouchInput
   - name: CreateEpochInput
+  - name: UpdateTeammatesInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -229,4 +240,14 @@ custom_types:
       type: object
       field_mapping:
         id: id
+  - name: UpdateTeammatesResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: users
+      name: user
+      source: default
+      type: object
+      field_mapping:
+        user_id: id
   scalars: []
