--- a/hasura/metadata/databases/default/tables/public_teammates.yaml
+++ b/hasura/metadata/databases/default/tables/public_teammates.yaml
@@ -45,3 +45,17 @@ select_permissions:
               id:
                 _eq: X-Hasura-User-Id
   role: user
+event_triggers:
+- definition:
+    delete:
+      columns: "*"
+    enable_manual: false
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: removeTeammate
+  retry_conf:
+    interval_sec: 10
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
