upgrade and pin Sentry deps with yarn
Ran `yarn add @sentry/integrations@6.19.2 @sentry/react@6.19.2 @sentry/tracing@6.19.2 @sentry/node@6.19.2`

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@material-ui/pickers": "3.3.10",
     "@radix-ui/react-dialog": "^0.1.7",
     "@self.id/core": "0.1.0",
-    "@sentry/integrations": "^6.18.2",
-    "@sentry/node": "^6.18.2",
-    "@sentry/react": "^6.18.2",
-    "@sentry/tracing": "^6.18.2",
+    "@sentry/integrations": "6.19.2",
+    "@sentry/node": "6.19.2",
+    "@sentry/react": "6.19.2",
+    "@sentry/tracing": "6.19.2",
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
     "@types/sharp": "^0.29.5",
