Implement deleteUser hasura action
closes #543

test plan:

1. start an epoch
2. give tokens to others in the the circle
3. execute
```gql
mutation deleteMe {
  deleteUser(payload: {circle_id: <your circle id>, address: "<your address>" }) {
    success
  }
}
```

4. verify
  a. that your user has a deleted_at timestamp
  b. your user's give_token values have been reset
  c. the users you gave to have had their token values reset
  d. the pending_token_gifts entries created by your user have been
  deleted.

5. optionally test receiving gifts.

--- a/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/hasura/metadata/databases/default/tables/public_users.yaml
@@ -161,6 +161,7 @@ event_triggers:
       columns:
       - non_giver
       - non_receiver
+      - deleted_at
   headers:
   - name: verification_key
     value_from_env: HASURA_EVENT_SECRET
