--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -57,11 +57,21 @@ actions:
     kind: synchronous
     handler: '{{HASURA_API_BASE_URL}}/actions/deleteEpoch'
     headers:
-      - name: verification_key
-        value_from_env: HASURA_EVENT_SECRET
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
   permissions:
-    - role: user
-    - role: superadmin
+  - role: user
+  - role: superadmin
+- name: deleteUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/deleteUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: logoutUser
   definition:
     kind: synchronous
@@ -150,6 +160,7 @@ custom_types:
   - name: VouchInput
   - name: CreateEpochInput
   - name: UpdateTeammatesInput
+  - name: DeleteUserInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -250,4 +261,5 @@ custom_types:
       type: object
       field_mapping:
         user_id: id
+  - name: ConfirmationResponse
   scalars: []
